--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^5.0.5",
         "autoprefixer": "^10.4.19",
         "axios": "^1.7.2",
         "laravel-vite-plugin": "^1.0.4",
